# hello-github-elzamc

./: Pipfile  README.md  README.md.bak  assignment-instructions.md  pyproject.toml  python-exercises.ipynb  requirements.txt
.github/classroom/: autograding.json
tests/: numpy_test.py  python_test.py
