[tool.poetry]
name = "python-exercises"
version = "0.1.0"
description = "python exercises - assignment"
authors = ["Yahya Gilany <yahya.gilany@uc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.15.1"
black = "^22.6.0"
numpy = "^1.23.2"
testbook = "^0.4.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
